--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,9 +1,9 @@
 ---
     author: "Pietro De Nicolao"
     date: \today
-    title: "The Filter Bubble: a threat for democracy?"
-    subtitle: "Computer Ethics course, 2016"
-    institute: "Politecnico di Milano"
+    title: "The Filter Bubble: a threat for free information?"
+    subtitle: "The dangers of personalizing filters"
+    institute: "Computer Ethics (2016-2017), Politecnico di Milano"
     toc: true
     navigation: "horizontal"
     lang: "en"
