--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
+# Products
 slide.pdf
-
+slide.tex
 
 # Created by https://www.gitignore.io/api/osx,latex
 
@@ -229,5 +230,5 @@ TSWLatexianTemp*
 # KBibTeX
 *~[0-9]*
 
-# auto folder when using emacs and auctex 
+# auto folder when using emacs and auctex
 /auto/*
