--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,6 +1,6 @@
 ---
     author: "Pietro De Nicolao"
-    date: \today
+    date: "December 13, 2016"
     title: "The Filter Bubble: a threat for plural information?"
     subtitle: "The dangers of personalizing filters"
     institute: "Computer Ethics (2016-2017), Politecnico di Milano"
